horizontal scroll bugfix by decsidaniel

--- a/sass/background.scss
+++ b/sass/background.scss
@@ -1,4 +1,8 @@
 .paragraph.paragraph--view-mode--default {
+  .bg-wrapper {
+      overflow: hidden;
+  }
+  
   .bg-fullsize {
     position: absolute;
     top: 0;
